service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-prod-app
  labels:
    app: devops-prod-app
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: devops-prod-app
