ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  annotations:
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
spec:
  ingressClassName: nginx
  rules:
  - host: devops.app.benae.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-prod-app
            port:
              number: 80
